feature/api add refresh token, logout etc
